<resources>
    <string name="_app_name">Weather App</string>
    <string name="_main">Main</string>
    <string name="_weather_in">Weather in...</string>
    <string name="_city">City</string>
    <string name="_local_weather">Local weather</string>
    <string name="_location">Location</string>
    <string name="_25_c">25 C</string>
    <string name="_pressure">Pressure</string>
    <string name="_dummy_condition">Cloudy and occ. showers</string>
    <string name="_details">Details</string>
    <string name="_humidity">Humidity</string>
    <string name="_max_temp">Max. Temp.</string>
    <string name="_min_temp">Min. Temp.</string>
    <string name="_wind">Wind</string>
    <string name="_50">50%</string>
    <string name="_15_c">15 C</string>
    <string name="_1096">1096</string>
    <string name="_4">4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_air_quality">Air Quality</string>
    <string name="_star1">star1</string>
</resources>