<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentCity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:background="@drawable/background_search"
            android:drawableStart="@drawable/ic_baseline_location_city_24"
            android:gravity="center"
            android:hint="@string/_city"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@color/Black"
            android:textColorHint="@color/Black"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/imageViewIconCitySearch"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:contentDescription="@string/_local_weather"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_search_24"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linear_layout_city_city">
        <TextView
            android:id="@+id/textViewCityCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:text="@string/_city"
            android:textAlignment="center"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3dp">

            <ImageView
                android:id="@+id/imageViewIconCity"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/_local_weather"
                android:scaleType="fitXY"
                android:src="@mipmap/image870" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/textViewTemperatureCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_25_c"
                    android:textSize="50sp"
                    android:textColor="@color/Black"
                    android:layout_gravity="start"/>

                <TextView
                    android:id="@+id/textViewWeaterConditionCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:text="@string/_dummy_condition"
                    android:textSize="22sp" />

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_details"
            android:textSize="30sp"
            android:textColor="@color/Black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/textViewLabelHumidityCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_humidity"
                    android:textSize="24sp"
                    android:textColor="@color/Black"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/textViewLabelMaxTempCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_max_temp"
                    android:textSize="24sp"
                    android:textColor="@color/Black"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/textViewLabelMinTempCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_min_temp"
                    android:textSize="24sp"
                    android:textColor="@color/Black"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/textViewLabelPressureCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_pressure"
                    android:textSize="24sp"
                    android:textColor="@color/Black"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/textViewLabelWindCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_wind"
                    android:textSize="24sp"
                    android:textColor="@color/Black"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"  >

                <TextView
                    android:id="@+id/textViewHumidityCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_50"
                    android:textColor="@color/Black"
                    android:textSize="24sp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/textViewMaxTempCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/_25_c"
                    android:textColor="@color/Black"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/textViewMinTempCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_15_c"
                    android:textColor="@color/Black"
                    android:textSize="24sp"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/textViewPressureCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1096"
                    android:textColor="@color/Black"
                    android:textSize="24sp"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/textViewWindCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4"
                    android:textColor="@color/Black"
                    android:textSize="24sp"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>