<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.FragmentMain">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:text="@string/_city"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textViewCity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:contentDescription="@string/_local_weather"
            android:scaleType="fitXY"
            android:src="@mipmap/image870" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/_25_c"
                android:textColor="@color/Black"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/textViewWeaterCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:text="@string/_dummy_condition"
                android:textSize="22sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/_details"
        android:textColor="@color/Black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLabelHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_humidity"
                android:textColor="@color/Black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewLabelMaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_max_temp"
                android:textColor="@color/Black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewLabelMinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_min_temp"
                android:textColor="@color/Black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewLabelPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_pressure"
                android:textColor="@color/Black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewLabelWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_wind"
                android:textColor="@color/Black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewLabelAirquality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/Black"
                android:text="@string/_air_quality"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_50"
                android:textColor="@color/Black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewMaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_25_c"
                android:textColor="@color/Black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewMinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_15_c"
                android:textColor="@color/Black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_1096"
                android:textColor="@color/Black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_4"
                android:textColor="@color/Black"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/_star1"
                    android:scaleType="fitXY"
                    android:src="@drawable/star_yellow"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/_star1"
                    android:scaleType="fitXY"
                    android:src="@drawable/star_yellow"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/_star1"
                    android:scaleType="fitXY"
                    android:src="@drawable/star_yellow"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/_star1"
                    android:scaleType="fitXY"
                    android:src="@drawable/star_grey" />

                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/_star1"
                    android:scaleType="fitXY"
                    android:src="@drawable/star_grey" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>